# gdl-conf-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: cache.rs  config.rs  downloaders.rs  enums.rs  lib.rs  outputs.rs  postprocessors.rs
src/extractors/: artstation.rs  aryion.rs  bbc.rs  behance.rs  blogger.rs  booru.rs  chapter.rs  cyberdrop.rs  danbooru.rs  derpibooru.rs  deviantart.rs  e621.rs  exhentai.rs  extractor.rs  fanbox.rs  flickr.rs  furaffinity.rs  gallery.rs  gelbooru.rs  generic.rs  gofile.rs  hentaifoundry.rs  hitomi.rs  imagechest.rs  imgur.rs  inkbunny.rs  instagram.rs  itaku.rs  kemonoparty.rs  khinsider.rs  lolisafe.rs  luscious.rs  manga.rs  manga_extractor.rs  mangadex.rs  mangapark.rs  mastodon.rs  misskey.rs  mod.rs  moebooru.rs  (+33 more)
tests/: config_tests.rs
tests/data/: de_cache.json  de_downloader.json  de_downloader_empty.json  de_extractor.json  de_extractor_empty.json  de_gallery_dl.json  de_output.json  de_postprocessor.json  de_postprocessor_empty.json
