[package]
name = "gdl-conf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = { version = "0", features = ["serde"] }
# chrono-tz = "0"
# log = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
# serde_repr = "0"
# tokio = { version = "1", features = ["full"] }
# url = { version = "2", features = ["serde"] }

[dev-dependencies]
# uuid = { version = "1", features = ["v4", "fast-rng"] }
